--- a/styles/_forms.scss
+++ b/styles/_forms.scss
@@ -37,6 +37,7 @@
 // Select box
 .form-field .nesty-input {
   border-radius: 4px;
+  border: 1px solid $high-contrast-border-color;
   height: 40px;
   line-height: 40px;
   outline: none;
@@ -45,6 +46,12 @@
   &:focus {
     border: 1px solid $brand_color;
     text-decoration: none;
+  }
+}
+
+.form-field .hc-multiselect {
+  &-toggle {
+    border: 1px solid $high-contrast-border-color;
   }
 }
 
